--- a/stylesheets/_home.scss
+++ b/stylesheets/_home.scss
@@ -146,6 +146,9 @@ $icon-size: 100px;
 
 .member__name--small {
   padding: spacing(2) 0;
+  @media screen and (max-width: $bp-xxs) {
+    height: 52px;
+  }
 }
 
 .member__text {
@@ -155,7 +158,7 @@ $icon-size: 100px;
     padding: spacing(4) spacing(12);
   }
   @media screen and (max-width: $bp-xxs - 1) {
-    padding: spacing(4) spacing(2);
+    padding: spacing(4) spacing(2) spacing(3);
   } 
 }
 
